# meuguia-cli

./: README.md  guia.py  micro.py  pyproject.toml  requirements.txt
tests/: test_fire_cli.py
