[tool.poetry]
name = "meuguia-cli"
version = "0.1.0"
description = ""
authors = ["vcwild <vcwildm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.4.0"
httpx = "^0.17.0"
parsel = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
